remove json files, move html to src folder

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <title>Example HTML File</title>
 </head>
 <body>
-  <h1>Hello friends, I hope you are well</h1>
+  <h1>JSON API via GitHub</h1>
 </body>
 </html>
